[package]
name = "lau-tile-compress"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-tile-compress"
description = "Tile compression — store more by storing less. Lossy compression that preserves meaning, not bytes."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
